# tidal

./: .gitignore  Dockerfile  deploy.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
tests/: conftest.py
tests/integration/: test_encode_flow.py  test_pipeline_flow.py
tests/unit/: test_audio_transcode.py  test_concatenation.py  test_encode_chunk.py  test_ffmpeg_processor.py  test_models.py  test_mux.py  test_probe.py  test_segmentation.py  test_vmaf.py
tidal/flows/: chunked_transcode.py  encode.py  pipeline.py  transcode.py
tidal/models/: transcode.py
tidal/tasks/: audio_transcode.py  concatenation.py  encode_chunk.py  mux.py  probe.py  segmentation.py  transcode.py  vmaf.py
tidal/utilities/: ffmpeg.py  logging.py  types.py  vars.py
tidal/utils/: types.py  vars.py
